# ai-slop-guard

./: .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  skill.json
.github/workflows/: main.yml
ai-slop-guard/: SKILL.md
ai-slop-guard/data/: rules.json
ai-slop-guard/references/: registry.md  rules.md
ai-slop-guard/scripts/: check.py  generate_registry.py
benchmarks/: README.md
docs/: article_draft.md  known-limitations.md  philosophy.md
docs/adr/: 0001-nine-stage-pipeline.md  0001-six-stage-pipeline.md  0002-stage6-reruns-stage3.md  0002-stage9-reruns-stage6.md  0003-why-stdlib-only.md  0004-why-no-autofix.md  README.md
examples/: violations_demo.py  violations_demo_fixed.py
examples/edge-cases/: README.md  decorator_without_parens.py
examples/false-positive/: README.md
examples/real-world/: README.md  flask_route_handler.py
src/ai_slop_guard/: cli.py  generate_registry.py
src/ai_slop_guard/data/: rules.json
src/ai_slop_guard/references/: registry.md  rules.md
tests/: test_golden.py
tests/golden/clean/: input.py
tests/golden/dead_code/: expected.json  input.py
tests/golden/dead_recursive_function/: expected.json  input.py
tests/golden/debug_leftover/: expected.json  input.py
tests/golden/decorated_and_test_functions/: input.py
tests/golden/dunder_all_reexport/: expected.json  input.py
tests/golden/empty_catch/: expected.json  input.py
tests/golden/ignore_marker_all_rules/: input.py
tests/golden/import_shadowed_by_reassignment/: expected.json  input.py
(+8 files in other folders)
