[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-slop-guard"
version = "0.2.0"
description = "A zero-dependency linter for catching AI-generated code smells."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
slop-guard = "ai_slop_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_slop_guard*"]

[tool.setuptools.package-data]
ai_slop_guard = ["data/*.json"]
